[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
mime_guess = "2.0.5"
num_cpus = "1.17.0"
rand = "0.10.1"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "signal",
] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xid = "1.1.1"
