[package]
name = "server-time"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
] }
tokio-stream = "0.1.18"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.13", features = ["stream"] }
